--- a/grid/templates/includes/formset.html
+++ b/grid/templates/includes/formset.html
@@ -1,3 +1,4 @@
+{% load custom_tags %}
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <a data-toggle="collapse" data-parent="#accordion" href="#collapse{{forloop.counter}}">
