Minor template cleanups
Former-commit-id: acaad43c49047f256c1a340e5d31b42a6eb2d9c4

--- a/grid/templates/deal-comparison.html
+++ b/grid/templates/deal-comparison.html
@@ -19,7 +19,7 @@
 
 
   {% for comparison_forms in forms %}
-    <div class="row">
+    <div class="row" id="comparison">
 
         <div class="col-md-6{% if not comparison_forms.2 %} bg-warning{% endif %}">
 
