--- a/grid/templates/global_base.html
+++ b/grid/templates/global_base.html
@@ -87,7 +87,7 @@
 
     <script src="{% static "js/editor/year-based-fields.js" %}" type="text/javascript" charset="utf-8"></script>
 
-    <script src="{% static "js/editor/jquery.formset.custom.js" %}" type="text/javascript" charset="utf-8"></script>
+    <script src="{% static "vendor/formset/src/jquery.formset.js" %}" type="text/javascript" charset="utf-8"></script>
     <script src="{% static "legacy/vendor/jquery.stickytableheaders.js" %}" type="text/javascript" charset="utf-8"></script>
     {% block global_js %}
     {% endblock %}
