--- a/grid/templates/includes/dealpanels.html
+++ b/grid/templates/includes/dealpanels.html
@@ -34,16 +34,21 @@
                             form.find('.formset-remove-form').trigger('click');
                         });
                         // Init map
-                        var map = form.find('.map');
-                        if (map) {
+                        var map = form.find('.maptemplate').removeClass("maptemplate").addClass("map");
+                        if (map.length > 0) {
                             var formId = form.find('h3 small').text().replace('#', ''),
-                                mapId = form.attr('class') + '-' + formId;
-                            map.attr('id', 'map-' + mapId);
+                                mapId = formId - 1; //form.attr('class') + '-' + formId;
+
+
+                            map.attr('id', 'map' + mapId);
+                            // TODO: Make jquery enumerate forms correctly, or this is the necessary work:
+                            // (Needs this kind of stuff for the other fields. no Way!)
+
                             initializeMap(mapId);
                         }
 
                         var investor = form.find('.operational_stakeholder');
-                        if (investor) {
+                        if (investor.length > 0) {
                             var index = 0;
                             var alreadyInitizalized = form.find("#chart" + index).find('svg') > 0;
                             if (alreadyInitizalized)
@@ -52,7 +57,6 @@
                     }
                     $(document).ready(function () {
                         $('.{{ form.form_title|slugify }}-form').formset({
-                            prefix: '{{ form.form_title|slugify }}',
                             addText: '<i class="fa fa-plus"></i> {% trans "Add another" %}',
                             addCssClass: 'formset-add-form hidden',
                             deleteText: '<i class="fa fa-minus"></i> {% trans "Remove" %}',
