Optimized map/data/charts cms block
Former-commit-id: 6dfd1b17282e9b89e1f9c71b22c5d967cf32cbf4

--- a/wagtailcms/templates/widgets/map-data-charts.html
+++ b/wagtailcms/templates/widgets/map-data-charts.html
@@ -1,15 +1,17 @@
-<a href="{% url 'map' %}">
-    <div class="col-md-offset-3 text-center col-md-2">
-    	<span class="whitecircle"><i class="lm-map-marker"></i></span><br>Map
-    </div>
-</a>
-<a href="{% url 'app_main' %}">
-    <div class="col-md-2 text-center">
-    	<span class="whitecircle"><i class="lm-table"></i></span><br>Data
-    </div>
-</a>
-<a href="{% url 'chart_transnational_deals' %}">
-    <div class="col-md-2 text-center">
-    	<span class="whitecircle"><i class="lm-bar-chart"></i></span><br>Charts
-    </div>
-</a>
+<div class="clearfix">
+	<a href="{% url 'map' %}">
+	    <div class="col-md-offset-3 text-center col-md-2">
+	    	<span class="whitecircle"><i class="lm-map-marker"></i></span><br>Map
+	    </div>
+	</a>
+	<a href="{% url 'app_main' %}">
+	    <div class="col-md-2 text-center">
+	    	<span class="whitecircle"><i class="lm-table"></i></span><br>Data
+	    </div>
+	</a>
+	<a href="{% url 'chart_transnational_deals' %}">
+	    <div class="col-md-2 text-center">
+	    	<span class="whitecircle"><i class="lm-bar-chart"></i></span><br>Charts
+	    </div>
+	</a>
+</div>
