--- a/charts/templates/charts/base_chart.html
+++ b/charts/templates/charts/base_chart.html
@@ -1,5 +1,9 @@
 {% extends "base.html" %}
-{% load i18n %}
+{% load i18n sass_tags %}
+
+{% block css %}
+<link href="{% sass_src 'css/charts.scss' %}" rel="stylesheet" type="text/css" />
+{% endblock %}
 
 {% block page_title %}{% trans "Chart" %}{% endblock %}
 {% block title %}{% trans "Chart" %}{% endblock %}
