--- a/grid/templates/deal-detail.html
+++ b/grid/templates/deal-detail.html
@@ -30,9 +30,9 @@
     {% if deal %}
         <input type="hidden" id="deal-stakeholder" value="{{ deal.operational_stakeholder.id }}">
         <div class="panel-group" id="accordion">
-            {% if forms %}
-                {% for form in forms %}
-                    {% if form.get_fields_display %}
+        {% if forms %}
+            {% for form in forms %}
+                {% if form.get_fields_display %}
                     <div class="panel panel-default">
 
                         <div class="panel-heading">
@@ -52,7 +52,7 @@
                             <div class="panel-body">
                                 {% for field in form.get_fields_display %}
                                     {% if field.name == 'tg' %}
-                                    <h3>{{ field.value }}</h3>
+                                        <h3>{{ field.value }}</h3>
                                     {% else %}
                                         <div class="row {{ field.name }}">
                                             <div class="col-md-3">
@@ -63,130 +63,127 @@
                                             </div>
                                         </div>
                                         {% if field.name == 'location' %}
-                                        <div class="map"></div>
+                                            <div class="map"></div>
                                         {% endif %}
                                     {% endif %}
                                 {% endfor %}
                             </div>
                         </div>
                     </div>
-                    {% endif %}
-                {% endfor %}
-            {% endif %}
+                {% endif %}
+            {% endfor %}
+        {% endif %}
 
-            {% if history|length > 1 %}
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <a id="history" data-toggle="collapse" data-parent="#accordion" href="#collapse_history">
-                            <h5 class="panel-title">
-                                {% trans "History" %}
+        {% if history|length > 1 %}
+            <div class="panel panel-default">
+                <div class="panel-heading">
+                    <a id="history" data-toggle="collapse" data-parent="#accordion" href="#collapse_history">
+                        <h5 class="panel-title">
+                            {% trans "History" %}
                                 <span id="collapsebtn_history"
                                       class="lm-chevron-circle-down pull-right mgrey1"></span>
-                            </h5>
-                        </a>
-                    </div>
-                    <div id="collapse_history" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            <table>
-                                <col width="33%">
-                                {% for changedate, item in history.items %}
-                                    <tr>
-                                        <td>
-                                            {% if forloop.counter == 1 %}<strong>{% endif %}
-                                            {{ changedate|timestamp_from_epoch }}
-                                            {% if forloop.counter == 1 %}</strong>{% endif %}
-                                        </td>
-                                        <!-- <td>{{ item.activity_changed_by }}</td>
-                                        <td>activity identifier: {{ item.activity.activity_identifier }}</td>
-                                        <td>availability: {{ item.activity.availability }}</td>
-                                        <td>history id: {{ item.activity.history_id }}</td>
-                                        -->
-                                        {% with dealid=item.activity.activity_identifier|addstr:"_"|addstr:changedate %}
-                                        <td>
+                        </h5>
+                    </a>
+                </div>
+                <div id="collapse_history" class="panel-collapse collapse">
+                    <div class="panel-body">
+                        {% for changedate, item in history.items %}
+                            <div class="row">
+                                <div class="col-sm-4">
+                                    {% if forloop.counter == 1 %}<strong>{% endif %}
+                                    {{ changedate|timestamp_from_epoch }}
+                                    {% if forloop.counter == 1 %}</strong>{% endif %}
+                                </div>
+                                <!-- <td>{{ item.activity_changed_by }}</td>
+                                    <td>activity identifier: {{ item.activity.activity_identifier }}</td>
+                                    <td>availability: {{ item.activity.availability }}</td>
+                                    <td>history id: {{ item.activity.history_id }}</td>
+                                    -->
+                                {% with dealid=item.activity.activity_identifier|addstr:"_"|addstr:changedate %}
+                                    <div class="col-sm-4">
 
-                                            {# TODO: Insert correct link and maybe disable button for currently version displayed  #}
-                                            <a type="button" class="btn"
-                                               href="{% url 'deal_detail' deal_id=dealid %}">
-                                                <i class="glyphicon glyphicon-eye-open"></i> {% trans "Show this version" %}
-                                            </a>
-                                        </td>
+                                        {# TODO: Insert correct link and maybe disable button for currently version displayed  #}
+                                        <a type="button" class="btn"
+                                           href="{% url 'deal_detail' deal_id=dealid %}">
+                                            <i class="glyphicon glyphicon-eye-open"></i> {% trans "Show this version" %}
+                                        </a>
+                                    </div>
 
-                                        <td>
+                                    <div class="col-sm-4">
 
-                                            <a type="button" class="btn"
-                                                    {% if not forloop.last %}
-                                               href="{% url 'compare_deals' activity_1=dealid %}"
-                                                        >
-                                                        <i class="glyphicon glyphicon-transfer"></i>
-                                                        {% trans "Compare with previous version" %}
-                                                    {% else %}
-                                                        disabled>
-                                                        <i class="glyphicon glyphicon-transfer"></i>
-                                                        {% trans "First version" %}
-                                                    {% endif %}
-                                            </a>
-                                        </td>
-                                        {% endwith %}
-                                    </tr>
-                                {% endfor %}
-                            </table>
-                        </div>
+                                        <a type="button" class="btn"
+                                                {% if not forloop.last %}
+                                           href="{% url 'compare_deals' activity_1=dealid %}"
+                                                    >
+                                                    <i class="glyphicon glyphicon-transfer"></i>
+                                                    {% trans "Compare with previous version" %}
+                                                {% else %}
+                                                    disabled>
+                                                    <i class="glyphicon glyphicon-transfer"></i>
+                                                    {% trans "First version" %}
+                                                {% endif %}
+                                        </a>
+                                    </div>
+                                {% endwith %}
+                            </div>
+                        {% endfor %}
                     </div>
                 </div>
-            {% endif %}
-                <div class="panel panel-default">
-                    <div class="panel-heading">
-                        <a id="comments" data-toggle="collapse" data-parent="#accordion" href="#collapse_comments">
-                            <h5 class="panel-title">
-                                {% trans "Comments" %}
+            </div>
+        {% endif %}
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <a id="comments" data-toggle="collapse" data-parent="#accordion" href="#collapse_comments">
+                    <h5 class="panel-title">
+                        {% trans "Comments" %}
                                 <span id="collapsebtn_history"
                                       class="lm-chevron-circle-down pull-right mgrey1"></span>
-                            </h5>
-                        </a>
-                    </div>
-                    <div id="collapse_comments" class="panel-collapse collapse">
-                        <div class="panel-body">
-                            <div class="col-sm-12">
-                                {% get_comment_count for deal.activity as comment_count %}
-                                {% if comment_count > 0 %}
-                                    {% render_comment_list for deal.activity %}
-                                {% else %}
-                                    <p class="alert alert-info">{% trans "There are no comments to this deal yet." %}</p>
-                                {% endif %}
-                            </div>
-                            <form method="." action="POST">
-                            {% get_comment_form for deal.activity as comment_form %}
-                            {% include "form.html" with form=comment_form %}
-                            <input type="submit" class="btn btn-primary" value="{% trans "Add comment" %}">
-                            </form>
-                        </div>
-                    </div>
+                    </h5>
+                </a>
             </div>
+            <div id="collapse_comments" class="panel-collapse collapse">
+                <div class="panel-body">
+                    <div class="col-sm-12">
+                        {% get_comment_count for deal.activity as comment_count %}
+                        {% if comment_count > 0 %}
+                            {% render_comment_list for deal.activity %}
+                        {% else %}
+                            <p class="alert alert-info">{% trans "There are no comments to this deal yet." %}</p>
+                        {% endif %}
+                    </div>
+                    <form method="." action="POST">
+                        {% get_comment_form for deal.activity as comment_form %}
+                        {% include "form.html" with form=comment_form %}
+                        <input type="submit" class="btn btn-primary" value="{% trans "Add comment" %}">
+                    </form>
+                </div>
+            </div>
+        </div>
 
 
-{% else %}
-    <p>
-        {% trans "There are currently no deals matching your search criteria." %}
-        <a href="{% url 'add_deal' %}">{% trans "Add a deal" %}</a>.
-    </p>
-{% endif %}
+    {% else %}
+        <p>
+            {% trans "There are currently no deals matching your search criteria." %}
+            <a href="{% url 'add_deal' %}">{% trans "Add a deal" %}</a>.
+        </p>
+    {% endif %}
 
 
-<script type="text/javascript">
-$(document).ready(function () {
-    var count = 0;
-    $('.map').each(function (idx) {
-        console.log("Setting up detail map: ", idx, count);
-        var lat = parseFloat($('.point_lat div:last-child').text()),
-            lon = parseFloat($('.point_lon div:last-child').text());
-        $(this).attr('id', 'map' + count);
-        initializeMap(count, lat, lon);
-        count++;
-    });
+    <script type="text/javascript">
+        $(document).ready(function () {
+            var count = 0;
+            $('.map').each(function (idx) {
+                console.log("Setting up detail map: ", idx, count);
+                var lat = parseFloat($('.point_lat div:last-child').text()),
+                        lon = parseFloat($('.point_lon div:last-child').text());
+                $(this).attr('id', 'map' + count);
+                initializeMap(count, lat, lon);
+                count++;
+            });
 
-    $('.operational_stakeholder').append('<div id="chart0"></div>');
+            $('.operational_stakeholder').append('<div id="chart0"></div>');
 
-    loadSankey(0, $('#deal-stakeholder').val())
-})
-</script>
+            loadSankey(0, $('#deal-stakeholder').val())
+        })
+    </script>
 {% endblock %}
